--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
+    "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
